--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.17",
     "babel-plugin-styled-components": "^2.0.2",
+    "framer-motion": "^5.4.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
