--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "16.11.11",
+    "@types/node": "^16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
