--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.4",
     "@types/styled-components": "^5.1.17",
+    "axios": "^0.24.0",
     "babel-plugin-styled-components": "^2.0.2",
     "framer-motion": "^5.4.5",
     "next": "12.0.7",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
